// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.perpetualtask.manifest;

option java_multiple_files = true;

message ManifestCollectionTaskParams {
  string app_manifest_id = 1;
  bytes manifest_collection_params = 2;
}
